[package]
name = "redis-api-check"
version = "0.1.0"
authors = ["bharathappali <bharath.appali@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-redis = "0.8.0"
redis-async = "0.6.1"
futures = "0.3.5"

[profile.release]
opt-level = 3
